# libwps

./: .gitignore  CHANGES  CREDITS  HACKING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  libwpd-0.8.pc.in  libwpd-zip.in  libwpd.spec  libwpd.spec.in  libwps-0.2.pc.in  libwps-0.8.pc.in  libwps-stream-0.1.pc.in  libwps-zip.in  libwps.pc.in  libwps.spec.in  project.config
autopackage/: Makefile.in
docs/: Makefile.am  Makefile.in
docs/doxygen/: Makefile.am  Makefile.in  doxygen.cfg
inc/: Makefile.am  Makefile.in
inc/libwps/: Makefile.am  Makefile.in  WPSDocument.h  libwps.h
libwps/: CHANGES  CREDITS  Makefile.am  README  configure.in  libwps-0.1.pc.in  libwps-zip.in
libwps/autopackage/: default.apspec.in
libwps/docs/doxygen/: doxygen.cfg
libwps/src/conv/html/: HtmlListenerImpl.cpp  wps2html.rc.in
libwps/src/conv/raw/: Makefile.am  RawListener.cpp
libwps/src/conv/text/: Makefile.am  TextListenerImpl.h
libwps/src/lib/: Makefile.am  WPS.h  WPS4.cpp  WPS4.h  WPS8.cpp  WPS8.h  WPSContentListener.cpp  WPSContentListener.h  WPSDocument.cpp  WPSFileStructure.h  WPSHeader.h  WPSListener.cpp  WPSListener.h  WPSOLEStream.cpp  WPSPageSpan.cpp  WPSPageSpan.h  WPSParser.h  WPSStreamImplementation.cpp  WPSStreamImplementation.h  WPSStylesListener.cpp  WPSStylesListener.h  libwps-stream.rc.in  libwps.h  libwps_internal.cpp  libwps_internal.h  makefile.mk
libwps/src/test/: Makefile.am  test.cpp
reference/Works-2.00A-DOS/: LANDSCAP.WPS  README  SIMPLE.PCL  SIMPLE.WKS  SIMPLE.WPS  VARIOUS.PCL  VARIOUS.WPS
reference/Works-3.0-Windows/: 10K_CHAR.WPS  10_chars.wps  256_chars.wps  2_COLUMN.WPS  PAGE.WPS  README  codepage.wps  floppy_bmp.wps  msworks.exe.txt  various.wps  various.wps.ps
reference/Works-3.0-Windows/RTF/: various.rtf
reference/Works-3.0-Windows/Windows Write 3.0/: various.wri
reference/Works-3.0-Windows/Windows Write 3.1/: various.wri
reference/Works-3.0-Windows/Word for Windows 2.0/: various.doc
reference/Works-3.0-Windows/Works 3.0 for Macintosh WP/: various.wp
reference/Works-3.0-Windows/Works for Windows 2.0 Works for DOS WP/: various.wps
reference/Works-4.5-Windows/: 2columns.wps  README  floppy.wps  various.wps
reference/Works-4.5-Windows/Works 3.0 for Macintosh/: various.wp
reference/Works-4.5-Windows/Works 4.0 for Macintosh/: various.wp
reference/Works-4.5-Windows/Works for Windows 2.0_ Works for DOS/: various.wps
reference/Works-4.5-Windows/Works for Windows 3.0/: various.wps
reference/Works-5.0-Windows/: 2columns.wps  README  codepage.wps  codepage2.wps  codepage3-mod.wps  codepage3.wps  floppy.wps  various.wps
reference/Works-5.0-Windows/Document Template/: various.wpt
reference/Works-5.0-Windows/RTF/: various.rtf
reference/Works-5.0-Windows/Word 6.0 95/: various.doc
reference/Works-5.0-Windows/Works 3.0 for Windows/: various.wps
reference/Works-5.0-Windows/Works 4.0 for Windows/: various.wps
reference/Works-6.0-Windows/: 2_Column.wps  Floppy2.wps  Readme.txt  Text Colors.wps
reference/Works-6.0-Windows/Works 2000/: 2_Column.wps  Floppy2.wps  Text Colors.wps  Various.wps  empty.wps
src/: Makefile.am  Makefile.in
src/conv/: Makefile.am  Makefile.in
src/conv/helper/: Makefile.am  helper.cpp  helper.h
src/conv/html/: .gitignore  HtmlDocumentGenerator.cpp  HtmlDocumentGenerator.h  HtmlListenerImpl.cpp  HtmlListenerImpl.h  Makefile.am  Makefile.in  TableStyle.cpp  TableStyle.h  TextRunStyle.cpp  TextRunStyle.h  main.cpp  wps2html.cpp  wps2html.rc.in  wps2html_internal.cpp  wps2html_internal.h
src/conv/raw/: .gitignore  Makefile.am  Makefile.in  RawDocumentGenerator.cpp  RawDocumentGenerator.h  RawListener.cpp  RawListener.h  main.cpp  wps2raw.cpp  wps2raw.rc.in
src/conv/text/: .gitignore  Makefile.am  Makefile.in  TextDocumentGenerator.cpp  TextDocumentGenerator.h  TextListenerImpl.cpp  TextListenerImpl.h  main.cpp  wps2text.cpp  wps2text.rc.in
src/conv/wks2csv/: .gitignore  Makefile.am  Makefile.in  wks2csv.cpp  wks2csv.rc.in
src/conv/wks2raw/: .gitignore  Makefile.am  Makefile.in  wks2raw.cpp  wks2raw.rc.in
src/conv/wks2text/: .gitignore  Makefile.am  Makefile.in  wks2text.cpp  wks2text.rc.in
src/lib/: DosWord.cpp  DosWord.h  GSFStream.cpp  GSFStream.h  Lotus.cpp  Lotus.h  LotusGraph.cpp  LotusGraph.h  LotusSpreadsheet.cpp  LotusSpreadsheet.h  LotusStyleManager.cpp  LotusStyleManager.h  MSWrite.cpp  MSWrite.h  Makefile.am  Makefile.in  Quattro.cpp  Quattro.h  QuattroSpreadsheet.cpp  QuattroSpreadsheet.h  WKS4.cpp  WKS4.h  WKS4Format.cpp  WKS4Format.h  WKS4Spreadsheet.cpp  WKS4Spreadsheet.h  WKSContentListener.cpp  WKSContentListener.h  WKSParser.cpp  WKSParser.h  WKSSubDocument.cpp  WKSSubDocument.h  WP5FontNameStringPoolPacket.h  WP5GeneralPacketData.h  WPDocument.cpp  WPDocument.h  WPS.h  WPS4.cpp  WPS4.h  WPS4Graph.cpp  (+93 more)
src/test/: Makefile.am  test.cpp
wps2sxw/: CHANGES  Makefile.am  README  autogen.sh  buildnumber.sh  configure.in  createBuildNumber.pl  wps2sxw-zip.in  wps2sxw.spec.in
wps2sxw/cmdline/: DiskDocumentHandler.cxx  DiskDocumentHandler.hxx  Makefile.am  StdOutHandler.cxx  StdOutHandler.hxx  femtozip.cxx  femtozip.hxx  wps2sxw.cxx  wps2sxw.rc.in
wps2sxw/filter/: DocumentElement.cxx  DocumentElement.hxx  DocumentHandler.hxx  FilterInternal.hxx  FontStyle.cxx  FontStyle.hxx  ListStyle.cxx  ListStyle.hxx  MSWorksCollector.cxx  MSWorksCollector.hxx  Makefile.am  PageSpan.cxx  PageSpan.hxx  SectionStyle.cxx  SectionStyle.hxx  Style.hxx  TableStyle.cxx  TableStyle.hxx  TextRunStyle.cxx  TextRunStyle.hxx  WriterProperties.hxx
