noinst_LTLIBRARIES = libwps2sxw-1.la

AM_CXXFLAGS = $(WPS2SXW_CXXFLAGS) $(DEBUG_CXXFLAGS)

libwps2sxw_1_la_LIBADD  = $(WPS2SXW_LIBS)
libwps2sxw_1_la_SOURCES =		\
	FilterInternal.hxx		\
	Style.hxx			\
	WriterProperties.hxx		\
	DocumentElement.cxx 		\
	DocumentElement.hxx 		\
	DocumentHandler.hxx		\
	FontStyle.cxx			\
	FontStyle.hxx			\
	ListStyle.cxx			\
	ListStyle.hxx			\
	PageSpan.cxx			\
	PageSpan.hxx			\
	SectionStyle.cxx 		\
	SectionStyle.hxx		\
	TableStyle.cxx 			\
	TableStyle.hxx			\
	TextRunStyle.cxx 		\
	TextRunStyle.hxx		\
	MSWorksCollector.cxx 	\
	MSWorksCollector.hxx 
